--- a/DevopsQuickstart/DevopsQuickstart.csproj
+++ b/DevopsQuickstart/DevopsQuickstart.csproj
@@ -8,6 +8,7 @@
         <Title>DevopsQuickstart</Title>
         <Authors>thammett</Authors>
         <PackageProjectUrl>https://github.com/thammet/devops-quickstart</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/thammet/devops-quickstart/blob/main/LICENSE</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/thammet/devops-quickstart</RepositoryUrl>
         <PackAsTool>true</PackAsTool>
         <ToolCommandName>devops-quickstart</ToolCommandName>
